fixed image not showing

--- a/love.css
+++ b/love.css
@@ -36,7 +36,7 @@ img {
 }
 
 .key {
-  color: #cc3c3c;
+  color: palevioletred;
 }
 
 
